[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameObjects/Card/Components/CenterFrame/CostLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Graphics/Card/Frame/active_frame.png" type="Texture" id=2]
[ext_resource path="res://GameObjects/Card/Components/NameLabel/NameLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/Card/ActiveCard/Frame/ActiveCenterpiece.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Graphics/Card/Cost/active_casting_cost.png" type="Texture" id=5]
[ext_resource path="res://GameObjects/Card/Components/CenterFrame/CenterFrame.gd" type="Script" id=6]
[ext_resource path="res://GameObjects/Card/Components/Glow/CardGlow.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameObjects/Card/Components/DescriptionLabel/DescriptionLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameObjects/Card/Components/Cardback/Cardback.tscn" type="PackedScene" id=9]

[node name="ActiveFrame" type="Node2D"]
script = ExtResource( 6 )

[node name="CardGlow" parent="." instance=ExtResource( 7 )]
position = Vector2( 1, 0 )

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ActiveCenterpieceCommon" parent="Frame" instance=ExtResource( 4 )]

[node name="DescriptionLabel" parent="Frame" instance=ExtResource( 8 )]
margin_left = -178.0
margin_top = 167.0
margin_right = 184.0
margin_bottom = 263.0

[node name="NameLabel" parent="Frame" instance=ExtResource( 3 )]

[node name="Cost" type="Sprite" parent="Frame"]
position = Vector2( 201, -310 )
texture = ExtResource( 5 )

[node name="CostLabel" parent="Frame/Cost" instance=ExtResource( 1 )]
margin_left = -15.0
margin_top = -40.0
margin_right = 17.0
margin_bottom = 32.0

[node name="Cardback" parent="." instance=ExtResource( 9 )]
visible = false
